# urlshortener

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PRIVACY.md  README.md  build.sh  deploy.sh  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py
doc/: deployment.md  development_roadmap.md  progress.md  url_shortener_spec.md
doc/plans/: 2026-04-30-api-and-tg-bot.md
doc/specs/: 2026-04-30-api-and-tg-bot-design.md
docs/superpowers/plans/: 2026-04-21-guest-mode-and-facebook-removal.md
docs/superpowers/specs/: 2026-04-21-guest-mode-and-facebook-removal-design.md
nginx/: default.conf.template  url-shortener.conf
shortener/: admin.py  exceptions.py  models.py  services.py  tests.py  urls.py  views.py
shortener/data/: blocklist.txt
shortener/management/commands/: cleanup_expired_urls.py
shortener/migrations/: 0001_initial.py  0002_add_unique_constraint_user_url.py  0003_alter_clicklog_options_alter_urlmodel_options_and_more.py  0004_urlmodel_expires_at.py  0005_ratelimitevent.py
shortener/templates/shortener/: 404.html  expired.html  home.html  my_urls.html  privacy.html  rate_limited.html  url_stats.html
static/css/: style.css
templates/: base.html
templates/socialaccount/: login.html
users/: admin.py  apps.py  middleware.py  models.py  services.py  signals.py  tests.py  urls.py  views.py
users/management/commands/: cleanup_expired_guests.py
users/migrations/: 0001_initial.py
users/templates/users/: banned.html
