[project]
name = "urlshortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "django>=6.0.1",
    "django-allauth>=65.14.0",
    "django-ipware>=7.0.1",
    "gunicorn>=24.1.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "whitenoise>=6.11.0",
]
